syntax = "proto3";
package hyperlane.core.v1;

option go_package = "github.com/troykessler/hyperlane-cosmos/x/core/types";

import "cosmos/base/query/v1beta1/pagination.proto";
import "hyperlane/core/v1/types.proto";
import "google/api/annotations.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";

// Msg defines the module Msg service.
service Query {
  // Mailboxes ...
  rpc Mailboxes(QueryMailboxesRequest) returns (QueryMailboxesResponse) {
    option (google.api.http).get = "/hyperlane/v1/mailboxes";
  }

  // Mailbox ...
  rpc Mailbox(QueryMailboxRequest) returns (QueryMailboxResponse) {
    option (google.api.http).get = "/hyperlane/v1/mailboxes/{id}";
  }

  // Delivered ...
  rpc Delivered(QueryDeliveredRequest) returns (QueryDeliveredResponse) {
    option (google.api.http).get =
        "/hyperlane/v1/mailboxes/{id}/delivered/{message_id}";
  }

  // RecipientIsm returns the recipient ISM ID for a registered application.
  //
  // The recipient is globally unique as every application ID registered on the
  // core module is unique. This means that one application cannot be registered
  // to two mailboxes, resulting in a mailbox-independent lookup.
  rpc RecipientIsm(RecipientIsmRequest) returns (RecipientIsmResponse) {
    option (google.api.http).get = "/hyperlane/v1/recipient_ism/{recipient}";
  }

  // VerifyDryRun ...
  rpc VerifyDryRun(QueryVerifyDryRunRequest)
      returns (QueryVerifyDryRunResponse) {
    option (google.api.http).get = "/hyperlane/v1/verify_dry_run";
  }
}

// QueryMailboxesRequest ...
message QueryMailboxesRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryMailboxesResponse ...
message QueryMailboxesResponse {
  repeated Mailbox mailboxes = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryMailboxRequest ...
message QueryMailboxRequest { string id = 1; }

// QueryMailboxResponse ...
message QueryMailboxResponse {
  Mailbox mailbox = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// QueryDeliveredRequest ...
message QueryDeliveredRequest {
  string id = 1;
  string message_id = 2;
}

// QueryDeliveredResponse ...
message QueryDeliveredResponse { bool delivered = 1; }

// RecipientIsmRequest ...
message RecipientIsmRequest { string recipient = 1; }

// RecipientIsmResponse ...
message RecipientIsmResponse { string ism_id = 1; }

// QueryVerifyDryRunRequest ...
message QueryVerifyDryRunRequest {
  string ism_id = 1;
  string message = 2;
  string metadata = 3;
}

// QueryVerifyDryRunResponse ...
message QueryVerifyDryRunResponse { bool verified = 1; }
